botao delete e limpar implementado

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <th scope="col">Tarefa</th>
                 <th scope="col">Local</th>
                 <th scope="col">Hora</th>
+                <th scope="col">Ação</th>
               </tr>
             </thead>
             <tbody id="tblTarefa">
@@ -30,6 +31,12 @@
                 <td>Lavar Roupa</td>
                 <td>Lavanderia</td>
                 <td>13:00</td>
+                <td >
+                  <button id="btnAlterar" type="button" class="btn btn-warning">Alterar</button>
+                  <button id="btnExcluir" type="button" class="btn btn-danger">Excluir</button>
+                </td>
+                
+
               </tr>
             </tbody>
           </table>
